--- a/songs/Superstition.html
+++ b/songs/Superstition.html
@@ -5,7 +5,7 @@
   <table id="navigation">
     <tr>
       <td>
-        <a href="../index.html"><img src="../images/sky-music-logo.png" width="100" height="100" /></a>
+        <a href="../index.html"><img src="../assets/images/sky-music-logo-sheets.png" width="100" height="100" /></a>
       </td>
       <td>
         <h1><a href="../index.html">Sky Music</a></h1>
