--- a/songs/Fur Elise.html
+++ b/songs/Fur Elise.html
@@ -5,6 +5,16 @@
 <link href="../css/main.css" rel="stylesheet" />
 <meta charset="utf-8"/></head>
 <body>
+	<table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../assets/images/sky-music-logo-sheets.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
 <h1> Für Elise </h1>
 <p> <b>Original Artist(s):</b> Beethoven </p>
 <p> <b>Transcript:</b> mimizan </p>
