--- a/songs/Cant-Help-Falling-in-Love-Intro.html
+++ b/songs/Cant-Help-Falling-in-Love-Intro.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:svg="http://www.w3.org/2000/svg">
 <head>
+   <div id="content-wrapper">
+      <div class="inner clearfix">
+        <section id="main-content">
+          {{ content }}
+        </section>
+</div>
 <title>Can't Help Falling in Love Intro</title>
 <style type="text/css">
 html {
