--- a/songs/A-Whole-New-World-Aladdin.html
+++ b/songs/A-Whole-New-World-Aladdin.html
@@ -428,6 +428,7 @@ svg rect.note-background {
 <p> <b>Original Artist(s):</b> Alan Menken </p>
 <p> <b>Transcript:</b> None-のん </p>
 <p> <b>Musical key:</b>  </p>
+<p> <b>Tags:</b> Disney </p>
 <div id="transcript">
 
 	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/w72ntP3ju-M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
