--- a/songs/Somewhere_Over_the_Rainbow.html
+++ b/songs/Somewhere_Over_the_Rainbow.html
@@ -425,8 +425,8 @@ svg rect.note-background {
     </tr>
   </table>
 <h1> Somewhere Over the Rainbow </h1>
-<p> <b>Original Artist(s):</b> Fox Mask </p>
-<p> <b>Transcript:</b>  </p>
+<p> <b>Original Artist(s):</b> Eva Cassidy </p>
+<p> <b>Transcript:</b> Fox Mask </p>
 <p> <b>Musical key:</b>  </p>
 	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/z5-CWNDjpZw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <div id="transcript">
