--- a/songs/Davy_Jones_Theme.html
+++ b/songs/Davy_Jones_Theme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:svg="http://www.w3.org/2000/svg">
 <head>
-<title>Davy Jones' Theme</title>
+<title>Davy Jones' Theme -  Pirates of the Caribbean</title>
 <style type="text/css">
 html {
   scroll-behavior: smooth;
@@ -425,8 +425,8 @@ svg rect.note-background {
     </tr>
   </table>
 	
-<h1> Davy Jones' Theme </h1>
-<p> <b>Original Artist(s):</b> Pirates of the Caribbean </p>
+<h1> Davy Jones' Theme -  Pirates of the Caribbean</h1>
+<p> <b>Original Artist(s):</b> Hans Zimmer </p>
 <p> <b>Transcript:</b> Silvary Bo </p>
 <p> <b>Musical key:</b>  </p>
 	
