--- a/songs/Always_with_Me_-_Spirited_Away_-_Ghibli.html
+++ b/songs/Always_with_Me_-_Spirited_Away_-_Ghibli.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:svg="http://www.w3.org/2000/svg">
 <head>
-<title>Always with Me - Spirited Away - Ghibli</title>
+<title>Always with Me - Spirited Away</title>
 <style type="text/css">
 html {
   scroll-behavior: smooth;
@@ -424,10 +424,11 @@ svg rect.note-background {
       </td>
     </tr>
   </table>
-<h1> Always with Me - Spirited Away - Ghibli </h1>
+<h1> Always with Me - Spirited Away </h1>
 <p> <b>Original Artist(s):</b>  </p>
 <p> <b>Transcript:</b> Fiqo Mendez</p>
 <p> <b>Musical key:</b>  </p>
+<p> <b>Musical key:</b> Ghibli </p>
 	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/KSbL7mwxJs0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	
 <div id="transcript">
