--- a/songs/Coffin-Dance-Astronomia.html
+++ b/songs/Coffin-Dance-Astronomia.html
@@ -414,11 +414,24 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+	<table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../assets/images/sky-music-logo-sheets.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
 <h1> Coffin Dance (Astronomia) </h1>
 <p> <b>Original Artist(s):</b> Vicetone & Tony Igy </p>
 <p> <b>Transcript:</b> Planaria </p>
 <p> <b>Musical key:</b>  </p>
+<p> <b>Tags:</b> Meme </p>
 <div id="transcript">
+
+	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/TRNCA9MX4iE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <hr />
 <table class="harp harp-0 "><tr><td>
