--- a/songs/Piano-Man.html
+++ b/songs/Piano-Man.html
@@ -414,6 +414,16 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+	<table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../assets/images/sky-music-logo-sheets.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
 <h1> Piano Man </h1>
 <p> <b>Original artist(s):</b> Billy Joel </p>
 <p> <b>Transcript writer:</b> damiante </p>
