--- a/songs/Somewhere_Over_the_Rainbow.html
+++ b/songs/Somewhere_Over_the_Rainbow.html
@@ -428,6 +428,8 @@ svg rect.note-background {
 <p> <b>Original Artist(s):</b> Eva Cassidy </p>
 <p> <b>Transcript:</b> Fox Mask </p>
 <p> <b>Musical key:</b>  </p>
+<p> <b>Tags:</b> Israel Kamakawiwoʻole, Scrubs</p>
+
 	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/z5-CWNDjpZw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <div id="transcript">
 
