--- a/songs/Popcorn.html
+++ b/songs/Popcorn.html
@@ -414,10 +414,21 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+	<table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../assets/images/sky-music-logo-sheets.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
 <h1> Popcorn </h1>
 <p> <b>Original Artist(s):</b> Hot Butter </p>
 <p> <b>Transcript:</b>  </p>
 <p> <b>Musical key:</b>  </p>
+<p> <b>Tags:</b> Crazy Frog </p>
 <div id="transcript">
 
 <hr />
