--- a/songs/Hokage-Funeral.html
+++ b/songs/Hokage-Funeral.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:svg="http://www.w3.org/2000/svg">
 <head>
-<title>Hokage Funeral</title>
+<title>Hokage Funeral - Naruto</title>
 <style type="text/css">
 html {
   scroll-behavior: smooth;
@@ -424,7 +424,7 @@ svg rect.note-background {
       </td>
     </tr>
   </table>
-<h1> Hokage Funeral </h1>
+<h1> Hokage Funeral - Naruto </h1>
 <p> <b>Original Artist(s):</b>  </p>
 <p> <b>Transcript:</b> Fox Mask </p>
 <p> <b>Musical key:</b>  </p>
