--- a/songs/Fly-Me-to-the-Moon.html
+++ b/songs/Fly-Me-to-the-Moon.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:svg="http://www.w3.org/2000/svg">
 <head>
-<title>Fly Me to the Moon</title>
+<title>Fly Me to the Moon - Neon Genesis Evangelion</title>
 <style type="text/css">
 html {
   scroll-behavior: smooth;
@@ -424,7 +424,7 @@ svg rect.note-background {
       </td>
     </tr>
   </table>
-<h1> Fly Me to the Moon </h1>
+<h1> Fly Me to the Moon - Neon Genesis Evangelion</h1>
 <p> <b>Original Artist(s):</b> Frank Sinatra </p>
 <p> <b>Transcript:</b> Fiqo Mendez </p>
 <p> <b>Musical key:</b>  </p>
