--- a/songs/To-Loves-End-Futari-No-Kimochi.html
+++ b/songs/To-Loves-End-Futari-No-Kimochi.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:svg="http://www.w3.org/2000/svg">
 <head>
-<title>To Love's End</title>
+<title>To Love's End - Inuyasha</title>
 <style type="text/css">
 html {
   scroll-behavior: smooth;
@@ -424,7 +424,7 @@ svg rect.note-background {
       </td>
     </tr>
   </table>
-<h1> To Love's End </h1>
+<h1> To Love's End - Inuyasha</h1>
 <p> <b>Original Artist(s):</b>  </p>
 <p> <b>Transcript:</b> Vi Thai</p>
 <p> <b>Musical key:</b>  </p>
