--- a/songs/Do-Re-Mi-Sound-of-Music.html
+++ b/songs/Do-Re-Mi-Sound-of-Music.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:svg="http://www.w3.org/2000/svg">
 <head>
-<title>Do-Ri-Mi</title>
+<title>Do-Ri-Mi - Sound of Music</title>
 <style type="text/css">
 html {
   scroll-behavior: smooth;
@@ -424,10 +424,11 @@ svg rect.note-background {
       </td>
     </tr>
   </table>
-<h1> Do-Ri-Mi </h1>
+<h1> Do-Ri-Mi - Sound of Music</h1>
 <p> <b>Original Artist(s):</b> Blackbear </p>
 <p> <b>Transcript:</b> apath </p>
 <p> <b>Musical key:</b>  </p>
+<p> <b>Tags:</b> Simpsons </p>
 <div id="transcript">
 
 <hr />
