--- a/songs/Little_Boxes.html
+++ b/songs/Little_Boxes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:svg="http://www.w3.org/2000/svg">
 <head>
-<title>Little Boxes</title>
+<title>Little Boxes - Weeds</title>
 <style type="text/css">
 html {
   scroll-behavior: smooth;
@@ -424,7 +424,7 @@ svg rect.note-background {
       </td>
     </tr>
   </table>
-<h1> Little Boxes </h1>
+<h1> Little Boxes - Weeds</h1>
 <p> <b>Original Artist(s):</b> Malvina Reynolds </p>
 <p> <b>Transcript:</b> Pod </p>
 <p> <b>Musical key:</b>  </p>
