--- a/songs/Somewhere_Over_the_Rainbow.html
+++ b/songs/Somewhere_Over_the_Rainbow.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:svg="http://www.w3.org/2000/svg">
 <head>
-<title>Somewhere Over the Rainbow</title>
+<title>Somewhere Over the Rainbow - Wizard of Oz</title>
 <style type="text/css">
 html {
   scroll-behavior: smooth;
@@ -424,7 +424,7 @@ svg rect.note-background {
       </td>
     </tr>
   </table>
-<h1> Somewhere Over the Rainbow </h1>
+<h1> Somewhere Over the Rainbow - Wizard of Oz</h1>
 <p> <b>Original Artist(s):</b> Eva Cassidy </p>
 <p> <b>Transcript:</b> Fox Mask </p>
 <p> <b>Musical key:</b>  </p>
