--- a/songs/Married-Life-UP.html
+++ b/songs/Married-Life-UP.html
@@ -425,9 +425,10 @@ svg rect.note-background {
     </tr>
   </table>
 <h1> Married Life - UP </h1>
-<p> <b>Original Artist(s):</b>  </p>
+<p> <b>Original Artist(s):</b> Michael Giacchino </p>
 <p> <b>Transcript:</b> Fiqo Mendez </p>
 <p> <b>Musical key:</b>  </p>
+<p> <b>Tags:</b> Disney </p>
 <div id="transcript">
 
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/3tOM0ldtoBc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
