--- a/songs/Emils-Sacrifice-NIER.html
+++ b/songs/Emils-Sacrifice-NIER.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:svg="http://www.w3.org/2000/svg">
 <head>
-<title>Emil's Sacrifice</title>
+<title>Emil's Sacrifice - NIER</title>
 <style type="text/css">
 html {
   scroll-behavior: smooth;
@@ -424,7 +424,7 @@ svg rect.note-background {
       </td>
     </tr>
   </table>
-<h1> Emil's Sacrifice </h1>
+<h1> Emil's Sacrifice - NIER</h1>
 <p> <b>Original Artist(s):</b> Keiichi Okabe </p>
 <p> <b>Transcript:</b> Kirie </p>
 <p> <b>Musical key:</b>  </p>
