--- a/songs/Tubular-Bells-Exorcist-Theme.html
+++ b/songs/Tubular-Bells-Exorcist-Theme.html
@@ -414,6 +414,16 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+	<table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../assets/images/sky-music-logo-sheets.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
 <h1> Tubular Bells - Exorcist Theme </h1>
 <p> <b>Original Artist(s):</b> Mike Oldfield </p>
 <p> <b>Transcript:</b>  </p>
