--- a/songs/Hallelujah.html
+++ b/songs/Hallelujah.html
@@ -414,11 +414,24 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+	<table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../assets/images/sky-music-logo-sheets.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
 <h1> Hallelujah </h1>
-<p> <b>Original Artist(s):</b>  </p>
-<p> <b>Transcript:</b>  </p>
+<p> <b>Original Artist(s):</b> Leonard Cohen </p>
+<p> <b>Transcript:</b> avxnnya </p>
 <p> <b>Musical key:</b>  </p>
 <div id="transcript">
+
+<blockquote class="reddit-card" data-card-created="1588841649"><a href="https://www.reddit.com/r/SkyGame/comments/gdqqyb/follow_up_to_my_last_video_heres_the_tutorial_for/">follow up to my last video, here’s the tutorial for Hallelujah &lt;3</a> from <a href="http://www.reddit.com/r/SkyGame">r/SkyGame</a></blockquote>
+<script async src="//embed.redditmedia.com/widgets/platform.js" charset="UTF-8"></script>
 
 <hr />
 <table class="harp harp-0 "><tr><td>
