--- a/songs/Threshold.html
+++ b/songs/Threshold.html
@@ -448,6 +448,8 @@ svg rect.note-background {
 <p> <b>Original Artist(s):</b> Austin Wintory, Laura Intravia </p>
 <p> <b>Transcript:</b> Tracey </p>
 <p> <b>Musical key:</b> E </p>
+	
+	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/AXC76X482lg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <div id="transcript">
 
 <br />
