--- a/songs/Beauty_And_The_Beast.html
+++ b/songs/Beauty_And_The_Beast.html
@@ -414,10 +414,23 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+	<table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/sky-music-logo.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
 <h1>Beauty And The Beast</h1>
 <p> <b>Original artist(s): </b>Howard Ashman, Alan Menken</p>
 <p> <b>Transcript writer: </b>eduwindy</p>
 <p> <b>Musical key: </b>D major</p>
+	
+	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/FFvo_GfXGd8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	
 <div id="transcript">
 
 <hr />
