Fix typo in author name

--- a/songs/Beauty_And_The_Beast.html
+++ b/songs/Beauty_And_The_Beast.html
@@ -426,7 +426,7 @@ svg rect.note-background {
   </table>
 <h1>Beauty And The Beast</h1>
 <p> <b>Original artist(s): </b>Howard Ashman, Alan Menken</p>
-<p> <b>Transcript writer: </b>eduwindy</p>
+<p> <b>Transcript writer: </b>eduwimdy</p>
 <p> <b>Musical key: </b>D major</p>
 	
 	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/FFvo_GfXGd8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
