--- a/songs/Translucent_0.html
+++ b/songs/Translucent_0.html
@@ -410,10 +410,24 @@ svg rect.note-background {
   stroke: red;
 }
  */
+	
+#navigation {
+  border: none;
+}
 
 </style>
 <meta charset="utf-8"/></head>
 <body>
+	<table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../assets/images/sky-music-logo-sheets.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
 <h1>Translucent</h1>
 <p> <b>Original artist(s): </b>Yanaginagi</p>
 <p> <b>Transcript writer: </b></p>
