--- a/songs/Translucent.html
+++ b/songs/Translucent.html
@@ -430,7 +430,7 @@ svg rect.note-background {
   </table>
 <h1>Translucent</h1>
 <p> <b>Original artist(s): </b>Yanaginagi</p>
-<p> <b>Transcript writer: </b>Golden Muff</p>
+<p> <b>Transcript writer: </b>GoldenMoff</p>
 <p> <b>Musical key: </b>D</p>
 <div id="transcript">
 
