--- a/songs/How-Far-Ill-Go.html
+++ b/songs/How-Far-Ill-Go.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:svg="http://www.w3.org/2000/svg">
 <head>
-<title>How Far I'll Go</title>
+<title>How Far I'll Go - Moana</title>
 <style type="text/css">
 html {
   scroll-behavior: smooth;
@@ -414,11 +414,24 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
-<h1> How Far I'll Go </h1>
-<p> <b>Original Artist(s):</b>  </p>
+	<table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../assets/images/sky-music-logo-sheets.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
+<h1> How Far I'll Go - Moana </h1>
+<p> <b>Original Artist(s):</b> Alessia Cara  </p>
 <p> <b>Transcript:</b> Hebi Ire </p>
 <p> <b>Musical key:</b>  </p>
+<p> <b>Musical key:</b> Disney  </p>
 <div id="transcript">
+
+	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/CBCfI4IkqYQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <hr />
 <table class="harp harp-0 "><tr><td>
