--- a/songs/Leaves-from-the-Vine.html
+++ b/songs/Leaves-from-the-Vine.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:svg="http://www.w3.org/2000/svg">
 <head>
-<title>Leaves from the Vine</title>
+<title>Leaves from the Vine (Little Soldied Boy) - Avatar</title>
 <style type="text/css">
 html {
   scroll-behavior: smooth;
@@ -414,11 +414,23 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
-<h1> Leaves from the Vine </h1>
+	<table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../assets/images/sky-music-logo-sheets.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
+<h1> Leaves from the Vine (Little Soldier Boy) - Avatar </h1>
 <p> <b>Original Artist(s):</b> Jeremy Zuckerman </p>
 <p> <b>Transcript:</b> Hebi Ire </p>
 <p> <b>Musical key:</b>  </p>
 <div id="transcript">
+
+	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/Z1dlCy3DKqU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <hr />
 <table class="harp harp-0 "><tr><td>
