--- a/songs/Promise_Reprise_-_Silent_Hill_2.html
+++ b/songs/Promise_Reprise_-_Silent_Hill_2.html
@@ -418,6 +418,16 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+	<table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../assets/images/sky-music-logo-sheets.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
 <h1>Promise (Reprise) - Silent Hill 2</h1>
 <p> <b>Original artist(s): </b>Akira Yamaoka</p>
 <p> <b>Transcript writer: </b>kai00</p>
