--- a/songs/Tha_Mi_Sgith.html
+++ b/songs/Tha_Mi_Sgith.html
@@ -418,6 +418,17 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+	
+	<table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../assets/images/sky-music-logo-sheets.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
 <h1>Tha Mi Sgith</h1>
 <p> <b>Original artist(s): </b>Traditional Scottish</p>
 <p> <b>Transcript writer: </b>SkyOwlKey</p>
