--- a/songs/Hoshi no Arika - Trails in the Sky FC.html
+++ b/songs/Hoshi no Arika - Trails in the Sky FC.html
@@ -418,6 +418,16 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+	<table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../assets/images/sky-music-logo-sheets.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
 <h1>Hoshi no Arika - Trails in the Sky FC</h1>
 <p> <b>Original artist(s): </b>Falcom Sound Team jdk</p>
 <p> <b>Transcript writer: </b>Hjowe</p>
