Add nav and embed to Merry Go Round of Life

--- a/songs/Merry_Go_Round_of_Life.html
+++ b/songs/Merry_Go_Round_of_Life.html
@@ -418,10 +418,24 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+	<table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../assets/images/sky-music-logo-sheets.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
+	
 <h1>Merry Go Round of Life</h1>
 <p> <b>Original artist(s): </b>Joe Hisaishi</p>
 <p> <b>Transcript writer: </b>Steven Ju</p>
 <p> <b>Musical key: </b>C</p>
+	
+	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/tcySK3ip6J0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	
 <div id="transcript">
 
 <hr />
