--- a/songs/Pocahontas_-_Colors_of_the_Wind.html
+++ b/songs/Pocahontas_-_Colors_of_the_Wind.html
@@ -1806,7 +1806,7 @@ svg rect.note-background {
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"></circle></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"></circle></svg></td></tr></tbody></table>
-<table class="harp harp-43 "><tbody><tr><td>
+<table class="harp harp-1 "><tbody><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"></circle></svg></td><td>
 <svg x="0" y="0" class="note-diamond harp-button-1" width="1em" height="1em" viewBox="0 0 91 91">
@@ -1824,10 +1824,10 @@ svg rect.note-background {
 <svg x="0" y="0" class="note-root harp-button-7" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"></circle></svg></td><td>
 <svg x="0" y="0" class="note-diamond harp-button-8" width="1em" height="1em" viewBox="0 0 91 91">
-<path class="instrument-button highlighted-0" d="M90.7 76.5c0 7.8-6.3 14.2-14.2 14.2H14.2C6.3 90.7 0 84.4 0 76.5V14.2C0 6.3 6.3 0 14.2 0h62.3c7.8 0 14.2 6.3 14.2 14.2V76.5z"></path>
- <rect x="22.6" y="22.7" transform="matrix(-0.7071 -0.7071 0.7071 -0.7071 45.3002 109.5842)" width="45.4" height="45.4" class="instrument-button-icon highlighted-0"></rect> </svg></td><td>
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"></circle></svg></td><td>
 <svg x="0" y="0" class="note-circle harp-button-9" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"></circle></svg></td></tr><tr><td>
+<path class="instrument-button highlighted-0" d="M90.7 76.5c0 7.8-6.3 14.2-14.2 14.2H14.2C6.3 90.7 0 84.4 0 76.5V14.2C0 6.3 6.3 0 14.2 0h62.3c7.8 0 14.2 6.3 14.2 14.2V76.5z"></path>
+ <circle cx="45.4" cy="45.4" r="25.5" class="instrument-button-icon highlighted-0"></circle></svg></td></tr><tr><td>
 <svg x="0" y="0" class="note-circle harp-button-10" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"></circle></svg></td><td>
 <svg x="0" y="0" class="note-diamond harp-button-11" width="1em" height="1em" viewBox="0 0 91 91">
