--- a/songs/Heart_and_Soul.html
+++ b/songs/Heart_and_Soul.html
@@ -414,11 +414,25 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+	<table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../assets/images/sky-music-logo-sheets.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
 <h1> Heart and Soul </h1>
 <p> <b>Original Artist(s):</b> Hoagy Carmichael </p>
 <p> <b>Transcript:</b> Shae_tkd </p>
 <p> <b>Musical key:</b>  </p>
+<p> <b>MTags:</b> Big </p>
 <div id="transcript">
+
+<blockquote class="reddit-card" data-card-created="1591285166"><a href="https://www.reddit.com/r/SkyGame/comments/gvjb3j/heart_and_soul_tutorial_both_parts_with_notes_3/">Heart and Soul tutorial (both parts with notes) &lt;3</a> from <a href="http://www.reddit.com/r/SkyGame">r/SkyGame</a></blockquote>
+<script async src="//embed.redditmedia.com/widgets/platform.js" charset="UTF-8"></script>
 
 <hr />
 <table class="harp harp-0 "><tr><td>
