--- a/songs/Mononoke_Hime_-_Joe_Hisaishi.html
+++ b/songs/Mononoke_Hime_-_Joe_Hisaishi.html
@@ -414,10 +414,21 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+	<table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../assets/images/sky-music-logo-sheets.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
 <h1> Mononoke Hime - Joe Hisaishi </h1>
 <p> <b>Original Artist(s):</b> 咕咕 Gue </p>
 <p> <b>Transcript:</b> justmeandmysalmon / SkyValleyAngel </p>
 <p> <b>Musical key:</b>  </p>
+	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/JZQ19C_8KXU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <div id="transcript">
 
 <hr />
