--- a/songs/The_Office_Theme.html
+++ b/songs/The_Office_Theme.html
@@ -412,10 +412,22 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+<table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../assets/images/sky-music-logo-sheets.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>  
 <h1>The Office Theme</h1>
 <p><b>Original artist(s): </b>James Ferguson</p>
 <p><b>Transcript writer: </b>Jonathan Xu</p>
 <p><b>Musical key: </b>G</p>
+  <blockquote class="reddit-card" data-card-created="1591576423"><a href="https://www.reddit.com/r/SkyGame/comments/glffq8/hoping_to_play_myself_into_the_office/">Hoping to play myself into the office 🙏</a> from <a href="http://www.reddit.com/r/SkyGame">r/SkyGame</a></blockquote>
+<script async src="//embed.redditmedia.com/widgets/platform.js" charset="UTF-8"></script>
 <div id="transcript">
 
 <hr />
