--- a/songs/Anastasia_-_Once_Upon_A_December.html
+++ b/songs/Anastasia_-_Once_Upon_A_December.html
@@ -412,6 +412,16 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+  <table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../assets/images/sky-music-logo-sheets.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
 <h1>Anastasia - Once Upon A December</h1>
 <p><b>Original artist(s): </b>Hebi Ire</p>
 <p><b>Transcript writer: </b>Sam</p>
