--- a/songs/Anastasia_-_Once_Upon_A_December.html
+++ b/songs/Anastasia_-_Once_Upon_A_December.html
@@ -426,6 +426,7 @@ svg rect.note-background {
 <p><b>Original artist(s): </b>Hebi Ire</p>
 <p><b>Transcript writer: </b>Sam</p>
 <p><b>Musical key: </b>C</p>
+  <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/xEFNaET24f0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <div id="transcript">
 
 <hr />
