--- a/songs/Stardew_Valley_-_Wind_can_be_still_Winter.html
+++ b/songs/Stardew_Valley_-_Wind_can_be_still_Winter.html
@@ -424,7 +424,7 @@ svg rect.note-background {
   </table>
 <h1>Stardew Valley - Wind can be Still (Winter)</h1>
 <p><b>Original artist(s): </b>Concernedape</p>
-<p><b>Transcript writer: </b>Isa Discord:IsaDaCool#4840</p>
+<p><b>Transcript writer: </b>Isa <b>Discord:</b> IsaDaCool#4840</p>
 <p><b>Musical key: </b>C</p>
 <div id="transcript">
 
