--- a/songs/Redemption_Song.html
+++ b/songs/Redemption_Song.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <title>Redemption Song</title>
-<script type="text/javascript" src="./js/sheetDarkModeScript.js"></script>
+<script type="text/javascript" src="/js/sheetDarkModeScript.js"></script>
 
 <script type="text/javascript">
 function showLogo(elementId) {
