--- a/songs/If_You're_Happy_and_You_Know_it.html
+++ b/songs/If_You're_Happy_and_You_Know_it.html
@@ -403,10 +403,7 @@ table.silent .ON-0.button {
 <p><b>Transcript writer: </b>NathanWolf</p>
 <p><b>Musical key: </b>C</p>
 
-<iframe src="https://www.youtube.com/watch?v=e-xbvVjRHzU" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
-
-<div id="transcript">
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/e-xbvVjRHzU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <hr />
 <table class="harp harp-0">
