--- a/songs/Marriage_d_Amour.html
+++ b/songs/Marriage_d_Amour.html
@@ -374,14 +374,14 @@ table.silent .ON-0.button {
 </style></head>
 <body>
 <h1>Mariage d Amour</h1>
-<p><b>Original artist(s): </b>Vi Thai</p>
-<p><b>Arranger, Transcriber: </b>Ashley L</p>
+<p><b>Original artist(s): </b>Richard Clayderman</p>
+<p><b>Arranger, Transcriber: </b>Vi Thai, Ashley L</p>
 <p><b>Musical key: </b>C</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ioVADch2WKg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <div id="ascii" style="display:none;" hidden="">
 #Mariage d Amour
-#Original artist(s): Vi Thai
-#Arranger, Transcriber: Ashley L
+#Original artist(s): Richard Clayderman
+#Arranger, Transcriber: Vi Thai, Ashley L
 #Musical key: C
 
 A1-B1 B5 C5 B5 C5 B5 C5 B5 . B5-C3 B1-C3 C4 A3-C4 C5 B3-C5 C4 A3-C4 C3 B1-C3 B5 A3-B5 B3 A1-B3 B1 B1 A3 C2 A2-C2 C1 B1-C1 B5 C1-A4 C2 B1-C1 A4 B1 A2 C1 C1-A2 C2 C2-A4 B1-C3 B2-C4 C2 C2-A5 B4 C1 C1-A1 B5 B5-A5 B4 A3-B5 C1 A3-B5 B5-C5 A1-B5 B1-A3 B3 A3-B5 B4 A1-B5 A1-B1 B3 A3-B5 B4 A1-B5 B1 B3 A1-C1 B5 C1-A2 B1 B3 C1-B3-A3 B5 C1-A4 B1-C1 B5 C1-A4-B5 C2-A5 C2-B4 C3 B2-C2 C3-B5 A1-B5 B3 B2 A1-B5 B1-A3 B3 A3-B5 B4 A1-B5 B1 B3 B1-C1 B5 C1-A4 C1 C2 C2-A5 C2-B4 C3 B2-C2 C3 A1-B5 B3 B2 . B1-C5 A1-B5 A1-B5 A3-B5 C1 C1-A2 A4 B4 B1-B4 C4-A5 B2-B4 A2 B4 B5 A1-B5 B3 B3-A5 C3 C2 A1-C3 B1 B3 A3-B3 B4 A2-B2-A5-B4 B2 A3-B5 B4 A3-B5 . B1-B3 A1 B3 A3-B3 B4 A2-B4 A4-B3-B2-B1 A1-A5 A2 A5 B1-A5 A5 A1-A3-A5 . B1-B3 A1 A1-B3 A3-B3 B4 A2-B4 A4-B3-B2-B1 A1-A5 A2 A5 B1 A5 A1-B1 B3 B5 A1-B1-B3-B5-C3 
