--- a/songs/Lyras Song.html
+++ b/songs/Lyras Song.html
@@ -375,6 +375,7 @@ table.silent .ON-0.button {
 
 </style></head>
 <body>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/nJf83tqu8gE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <h1>Lyra's Song (Fairy Tail)</h1>
 <p><b>Original artist(s): </b>Yasuharu Takanashi</p>
 <p><b>Arranger, Transcriber: </b>Falk</p>
