--- a/songs/Stardew_Valley_-_Wind_can_be_Still_Winter.html
+++ b/songs/Stardew_Valley_-_Wind_can_be_Still_Winter.html
@@ -428,6 +428,8 @@ svg rect.note-background {
 <p><b>Original artist(s): </b>Concernedape</p>
 <p><b>Transcript writer: </b>Isa Discord:IsaDaCool#4840</p>
 <p><b>Musical key: </b>C</p>
+  
+  <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/qcp_TSWshbs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <div id="transcript">
 
 <br />
