Moved songs in categories

--- a/songs/videogames/Super Mario.html
+++ b/songs/videogames/Super Mario.html
@@ -414,7 +414,8 @@ svg rect.note-background {
  */
 
 
-</style><meta charset="utf-8"/></head>
+</style>
+<meta charset="utf-8"/></head>
 <body>
 
   <table id="navigation">
