--- a/songs/videogames/Super_Mario_Galaxy_-_Comet_Observatory.html
+++ b/songs/videogames/Super_Mario_Galaxy_-_Comet_Observatory.html
@@ -405,6 +405,7 @@ table.silent .ON-0.button {
 <p><b>Original artist(s): </b>Nintendo</p>
 <p><b>Arranger, Transcriber: </b>Isa</p>
 <p><b>Musical key: </b>D</p>
+ <iframe width="560" height="315" src="https://www.youtube.com/embed/YKDKEWs82a4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <div id="ascii" style="display:none;" hidden="">
 #$Title: Super Mario Galaxy - Comet Observatory 1
 #$Original artist(s): Nintendo
