--- a/songs/anime/kataware_Dokiyour_name.html
+++ b/songs/anime/kataware_Dokiyour_name.html
@@ -402,12 +402,12 @@ table.silent .ON-0.button {
 </style></head>
 <body>
 <h1>kataware Doki(your name)</h1>
-<p><b>Original artist(s): </b>Roadwimpsstaff</p>
+<p><b>Original artist(s): </b>Roadwimpsstaff (RADWIMPS)</p>
 <p><b>Arranger, Transcriber: </b>Me</p>
 <p><b>Musical key: </b>C</p>
 <div id="ascii" style="display:none;" hidden>
 #$Title: kataware Doki(your name)
-#$Original artist(s): Roadwimpsstaff
+#$Original artist(s): Roadwimpsstaff (RADWIMPS)
 #$Arranger, Transcriber: Me
 #$Musical key: C
 
