--- a/songs/anime/Mononoke_Hime_-_Joe_Hisaishi.html
+++ b/songs/anime/Mononoke_Hime_-_Joe_Hisaishi.html
@@ -426,8 +426,8 @@ svg rect.note-background {
       </td>
     </tr>
   </table>
-<h1> Mononoke Hime - Joe Hisaishi </h1>
-<p> <b>Original Artist(s):</b> 咕咕 Gue </p>
+<h1> Mononoke Hime </h1>
+<p> <b>Original Artist(s):</b> Joe Hisaishi by 咕咕 Gue </p>
 <p> <b>Transcript:</b> justmeandmysalmon / SkyValleyAngel </p>
 <p> <b>Musical key:</b>  </p>
 	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/JZQ19C_8KXU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
