Update and rename You-are-my-Sunshine.html to C. Mitchell, J. Davies__You_are_my_Sunshine.html

--- a/songs/popular/C. Mitchell, J. Davies__You_are_my_Sunshine.html
+++ b/songs/popular/C. Mitchell, J. Davies__You_are_my_Sunshine.html
@@ -427,7 +427,7 @@ svg rect.note-background {
     </tr>
   </table>
 <h1> You are my Sunshine </h1>
-<p> <b>Original Artist(s):</b>  </p>
+<p> <b>Original Artist(s):</b>Charles Mitchells & Jimie Davies</p>
 <p> <b>Transcript:</b> Jane Sky </p>
 <p> <b>Musical key:</b>  </p>
 <div id="transcript">
