Update and rename Concernedape__Stardew_Valley_-_Wind_can_be_Still_Winter.html to Stardew_Valley__Wind_can_be_Still_Winter.html

--- a/songs/videogames/Stardew_Valley__Wind_can_be_Still_Winter.html
+++ b/songs/videogames/Stardew_Valley__Wind_can_be_Still_Winter.html
@@ -424,8 +424,8 @@ svg rect.note-background {
       </td>
     </tr>
   </table>
-<h1>Stardew Valley - Wind can be Still (Winter)</h1>
-<p><b>Original artist(s): </b>Concernedape</p>
+<h1>Wind can be Still (Winter)</h1>
+<p><b>Original artist(s): </b> Stardew Valley</p>
 <p><b>Transcript writer: </b>Isa Discord:IsaDaCool#4840</p>
 <p><b>Musical key: </b>C</p>
   
