--- a/songs/videogames/Stardew_Valley_-_Mines_(Cloth).html
+++ b/songs/videogames/Stardew_Valley_-_Mines_(Cloth).html
@@ -405,6 +405,9 @@ table.silent .ON-0.button {
 <p><b>Original artist(s): </b>Stardew Valley</p>
 <p><b>Arranger, Transcriber: </b>Isa</p>
 <p><b>Musical key: </b>E</p>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/bjVXaR_-Uc8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 <div id="ascii" style="display:none;" hidden="">
 #$Title: Mines (Cloth)
 #$Original artist(s): Stardew Valley
