--- a/songs/videogames/Stardew_Valley_-_Mines_(Cloth).html
+++ b/songs/videogames/Stardew_Valley_-_Mines_(Cloth).html
@@ -401,8 +401,8 @@ table.silent .ON-0.button {
 
 </style></head>
 <body>
-<h1>Mines (Cloth)</h1>
-<p><b>Original artist(s): </b>Stardew Valley</p>
+<h1> Stardew Valley - Mines (Cloth)</h1>
+<p><b>Original artist(s): </b>ConcernedApe and ChuckleFish</p>
 <p><b>Arranger, Transcriber: </b>Isa</p>
 <p><b>Musical key: </b>E</p>
 
