--- a/songs/anime/Spirited_Away_-_Always_with_Me.html
+++ b/songs/anime/Spirited_Away_-_Always_with_Me.html
@@ -426,12 +426,51 @@ svg rect.note-background {
       </td>
     </tr>
   </table>
-<h1> Always with Me - Spirited Away </h1>
-<p> <b>Original Artist(s):</b>  </p>
-<p> <b>Transcript:</b> Fiqo Mendez</p>
-<p> <b>Musical key:</b>  </p>
-<p> <b>Musical key:</b> Ghibli </p>
-	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/KSbL7mwxJs0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<h1> Always with Me - Spirited Away</h1>
+<p> <b>Original Artist(s): </b>Ghibli</p>
+<p> <b>Transcript: </b>Fiqo Mendez</p>
+<p> <b>Musical key: </b>C</p>
+
+<div id="ascii" style="display:none;" hidden>
+#$Title: Spirited Away - Always with me
+#$Original artist(s): Ghibli
+#$Arranger, Transcriber: Fiqo Mendez
+#$Musical key: C
+
+B3 B4 A1A3B5 B3 C2 .
+B5 A5B2B4 C2 . B4 B1B3B5 B1 B5
+B3 A3A5B2 . A5 A4B1B3 B2 B3
+B4 A3A5 B3 B4 B5 A4B3C1 C1 B5
+B4 B3 A5B2B4 . B3 B4 A1A3B5
+B3 C2 . B5 A5B2B4 C2 . B4
+B1B3B5 B1 B1 B2 B3 A3A5B2 .
+A5 A4B1B3 B2 B3 B4 A3A5 B3 B4
+B5 A2A4B4 B5 B4 B3 A1A3B3 .
+B3 A1A3 . B3 A1A3 . B3 A1A3 .
+B5 C1 A1A3C2 C2 C2 A5B4C2
+C2 C3 C2 C1 B1B3B5 B5 B5 A5B2B5
+B5 C1 B5 B4 A4B1B3 B3 .
+B2 A2A4B1 B2 B3 A5B2B4 .
+B5 B4 B5 A5B2B4 . A5 B5
+C1 A1A3C2 C2 C2 A5B4C2 C2 C3 C2
+C1 B1B3B5 . B5 B5 A5B2B5 C1
+B5 B4 B3 B2 A4B1B3 B2 B3 B4
+A3A5 B3 B4 B5 A4B3C1 C1 B5 B4
+B3 A1A3B3 . B3 . A1A3 .
+B3 . A1A3 . B3 B4 A1A3B5 B3
+C2 . B5 A5B2B4 C2 . B4 B1B3B5
+B1 B5 . B3 . A3A5B2 .
+A5 A4B1B3 B2 B3 B4 A3A5 B3 B4
+B5 A4B3C1 C1 B5 B4 B3 A5B2B4 .
+B3 B4 A1A3B5 B3 C2 B5 A5B2B4
+C2 B4 B1B3B5 B1 B1 B2 B3 A3A5B2
+. A5 A4B1B3 B2 B3 B4 A3A5 .
+B3 B4 B5 A4B3C1 C1 B5 B4 B3
+A1A3B3 . B3 A1A3 . B3 A1A3 .
+B5 C2 C5 
+</div>
+
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/KSbL7mwxJs0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	
 <div id="transcript">
 
