Repaired script links

--- a/songs/traditional/Patty_&_Mildred_Hill__Happy_Birthday_to_you_(advanced).html
+++ b/songs/traditional/Patty_&_Mildred_Hill__Happy_Birthday_to_you_(advanced).html
@@ -4,9 +4,9 @@
 
 <meta name="date.created" content="2020-10-04 07:06:44.068656">
 <title>Happy Birthday to you (advanced)</title>
-<script type="text/javascript" src="./Happy Birthday to you (advanced)_files/navigationTableScript.js.download"></script>
-<script type="text/javascript" src="./Happy Birthday to you (advanced)_files/sheetDarkModeScript.js.download"></script>
-<script type="text/javascript" src="./Happy Birthday to you (advanced)_files/sheetDownloaderScript.js.download"></script>
+<script type="text/javascript" src="/navigationTableScript.js"></script>
+<script type="text/javascript" src="/sheetDarkModeScript.js"></script>
+<script type="text/javascript" src="/sheetDownloaderScript.js"></script>
 <style type="text/css">
 @media (prefers-reduced-motion: reduce) {
   html {
