--- a/songs/videogames/Stardew_Valley_-_Mines_(Cloth).html
+++ b/songs/videogames/Stardew_Valley_-_Mines_(Cloth).html
@@ -4,9 +4,9 @@
 
 <meta name="date.created" content="2020-09-18 19:01:37.946522">
 <title>Mines (Cloth)</title>
-<script type="text/javascript" src="./Mines (Cloth)_files/navigationTableScript.js.download"></script>
-<script type="text/javascript" src="./Mines (Cloth)_files/sheetDarkModeScript.js.download"></script>
-<script type="text/javascript" src="./Mines (Cloth)_files/sheetDownloaderScript.js.download"></script>
+<script type="text/javascript" src="/navigationTableScript.js"></script>
+<script type="text/javascript" src="/sheetDarkModeScript.js"></script>
+<script type="text/javascript" src="/sheetDownloaderScript.js"></script>
 <style type="text/css">
 @media (prefers-reduced-motion: reduce) {
   html {
