--- a/songs/videogames/Super_Mario_Galaxy_-_Comet_Observatory.html
+++ b/songs/videogames/Super_Mario_Galaxy_-_Comet_Observatory.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<!-- saved from url=(0110)https://jmmelko.pythonanywhere.com/smedia/music_maker/songs/public/temp/Super_Mario_Galaxy_-_Comet_Obse_0.html -->
 <html xmlns:svg="http://www.w3.org/2000/svg" lang="en_US"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <meta name="date.created" content="2020-09-01 22:03:52.107161">
 <title>Super Mario Galaxy - Comet Observatory 1</title>
-<script type="text/javascript" src="./Super Mario Galaxy - Comet Observatory 1_files/navigationTableScript.js.download"></script>
-<script type="text/javascript" src="./Super Mario Galaxy - Comet Observatory 1_files/sheetDarkModeScript.js.download"></script>
-<script type="text/javascript" src="./Super Mario Galaxy - Comet Observatory 1_files/sheetDownloaderScript.js.download"></script>
+<script type="text/javascript" src="/navigationTableScript.js.download"></script>
+<script type="text/javascript" src="/sheetDarkModeScript.js.download"></script>
+<script type="text/javascript" src="/sheetDownloaderScript.js.download"></script>
 <style type="text/css">
 @media (prefers-reduced-motion: reduce) {
   html {
@@ -405,7 +404,7 @@ table.silent .ON-0.button {
 <p><b>Original artist(s): </b>Nintendo</p>
 <p><b>Arranger, Transcriber: </b>Isa</p>
 <p><b>Musical key: </b>D</p>
- <iframe width="560" height="315" src="https://www.youtube.com/embed/YKDKEWs82a4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/YKDKEWs82a4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <div id="ascii" style="display:none;" hidden="">
 #$Title: Super Mario Galaxy - Comet Observatory 1
 #$Original artist(s): Nintendo
