--- a/songs/anime/Violet_Evergarden_-_Michishirube.html
+++ b/songs/anime/Violet_Evergarden_-_Michishirube.html
@@ -4,9 +4,9 @@
 
 <meta name="date.created" content="2020-10-01 13:50:53.319428">
 <title>Michishirube みちしるべ</title>
-<script type="text/javascript" src="./Michishirube みちしるべ_files/navigationTableScript.js.download"></script>
-<script type="text/javascript" src="./Michishirube みちしるべ_files/sheetDarkModeScript.js.download"></script>
-<script type="text/javascript" src="./Michishirube みちしるべ_files/sheetDownloaderScript.js.download"></script>
+<script type="text/javascript" src="/navigationTableScript.js"></script>
+<script type="text/javascript" src="/sheetDarkModeScript.js"></script>
+<script type="text/javascript" src="/sheetDownloaderScript.js"></script>
 <style type="text/css">
 @media (prefers-reduced-motion: reduce) {
   html {
