--- a/songs/popular/Vanessa_Carlton__A_Thousand_Miles_(Isa_improved_version).html
+++ b/songs/popular/Vanessa_Carlton__A_Thousand_Miles_(Isa_improved_version).html
@@ -4,9 +4,9 @@
 
 <meta name="date.created" content="2020-09-05 14:27:16.384218">
 <title>A Thousand Miles</title>
-<script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=kDXD4Z5bgzzrDBJYWaaEluFXWvUwP_F_W7YYWlVcFGdCob6Jq1bUeB9pjd-UcKCh6P6D_Ruo70-WZtLoMdtlue7FAwyyyV_GL14qCRkzL_bpSpmmjkRQAgT4M1CIONvWRRoEohcfGNm25XkE-cvFVjLsqgvC4cI9_j6k9IHoyDM" charset="UTF-8"></script><script type="text/javascript" src="./A Thousand Miles_files/navigationTableScript.js.download"></script>
-<script type="text/javascript" src="./A Thousand Miles_files/sheetDarkModeScript.js.download"></script>
-<script type="text/javascript" src="./A Thousand Miles_files/sheetDownloaderScript.js.download"></script>
+<script type="text/javascript" src="/navigationTableScript.js"></script>
+<script type="text/javascript" src="/sheetDarkModeScript.js"></script>
+<script type="text/javascript" src="/sheetDownloaderScript.js"></script>
 <style type="text/css">
 @media (prefers-reduced-motion: reduce) {
   html {
