--- a/songs/popular/Westlife__You_raise_me_up.html
+++ b/songs/popular/Westlife__You_raise_me_up.html
@@ -4,9 +4,9 @@
 
 <meta name="date.created" content="2020-09-29 04:43:31.158030">
 <title>You raise me up</title>
-<script type="text/javascript" src="./You raise me up_files/navigationTableScript.js.download"></script>
-<script type="text/javascript" src="./You raise me up_files/sheetDarkModeScript.js.download"></script>
-<script type="text/javascript" src="./You raise me up_files/sheetDownloaderScript.js.download"></script>
+<script type="text/javascript" src="/navigationTableScript.js"></script>
+<script type="text/javascript" src="/sheetDarkModeScript.js"></script>
+<script type="text/javascript" src="/sheetDownloaderScript.js"></script>
 <style type="text/css">
 @media (prefers-reduced-motion: reduce) {
   html {
