--- a/songs/anime/Joe_Hisaishi__Kikis_Delivery_Service_-_A_Town_With_an_Ocean_View.html
+++ b/songs/anime/Joe_Hisaishi__Kikis_Delivery_Service_-_A_Town_With_an_Ocean_View.html
@@ -430,6 +430,43 @@ svg rect.note-background {
 <p><b>Musical key: </b>C</p>
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/RnNGIBheZC8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+<div id="ascii" style="display:none;" hidden>
+#$Title: Kiki's Delivery Service - A Town With An Ocean View
+#$Original artist(s): Joe Hisaishi
+#$Arranger, Transcriber: Nezumi
+#$Musical key: C
+
+A2A4B1B5 B4 B3 A3A5B3 B2 B1 B2 A3A5B2B4 B3 B2 B3 A4B1B3C2 .*2 C1 A2A4B1B5 
+.*2 B4 A3A5B2B4 .*2 B3 A4B1B3 
+.*3 A2A5B2B4 .*3 B5
+A3B5C3C5 B1 B3 B5 A3B5C2C4 A5 B2 B5
+A4B3C3 B3 B2C2 B1C1 A1C2 A3 A5 B3
+A2A4B4 A4B1C1 B1B3C3 B3B5C5 A5B4C4 C2 A5B5 A4B4
+A1A5B5 A3 A5 A3 A3A5B2 .*2 B5
+A3B5C3C5 B1 B3 B5 A3B5C2C4 A5 B2 B5
+A4B3C3 B3 B2C2 B1C1 A1C2 A3 A5 B3
+A2A4B4 A4B1C1 B1B3C3 B3B5C5 A5B4C4 C5 A5B4C4 C2
+B1B3B5C3 B1 B3 B5 A1A3B1 . B3C3 B4C4
+A2B1B5C5 B5C5 A2B1B5C5 B5C5 A2A5B5C5 B4C4 B3C3 B4C4
+A1B2C2 A3 A5 B3 A5B2 . B1C1 B2C2
+A2B1B3C3 B3C3 A2B1B3C3 B3C3 A2A5B3C3 B2C2 B1C1 B2C2
+A1A5B5 A3 A5 A3 A3A5B2 .*2 A5B5
+A2B2 B4 C1 C3 A3A5C2 .*2 C1
+A4B1B5 B5 C3 C4 A5B2C5 C5 C4 C5
+A4B1B3B5 B4B5 B1 A5B1 A3 . A2 .
+A3A5B2 . B5C2C4 .*4 B5
+A3B5C3C5 B1 B3 B5 A3B5C2C4 A5 B2 B5
+A4B3C3 B3 B2C2 B1C1 A1C2 A3 A5 B3
+A2A4B4 A4B1C1 B1B3C3 B3B5C5 A5B4C4 C2 A5B5 A4B4
+A1A5B5 A3 A5 B3 A3A5B2 .*2 B5
+A3B5C3C5 B1 B3 B5 A3B5C2C4 A5 B2 B5
+A4B3C3 B3 B2C2 B1C1 A1C2 A3 A5 B3
+A2A4B4 A4B1C1 B1B3C3 B3B5C5 A5B4C4 C5 A5B4C4 C2
+B1B3B5C3 B1 B3 B5 A1A3B1 . A1 A2
+A2A4B1 A2A4B1B3 A5B4 A5B5 B2 A5 A1A3B1 .
+. . B1B3B5C3 
+</div>
+
 <div id="transcript">
 
 <hr />
@@ -536,7 +573,7 @@ svg rect.note-background {
 </svg></td><td><svg x="0" y="0" class="OFF button-8" viewBox="0 0 91 91"><circle cx="45.4" cy="45.4" r="12" class="icon OFF"/></svg></td><td><svg x="0" y="0" class="OFF button-9" viewBox="0 0 91 91"><circle cx="45.4" cy="45.4" r="12" class="icon OFF"/></svg></td></tr>
 <tr><td><svg x="0" y="0" class="OFF button-10" viewBox="0 0 91 91"><circle cx="45.4" cy="45.4" r="12" class="icon OFF"/></svg></td><td><svg x="0" y="0" class="OFF button-11" viewBox="0 0 91 91"><circle cx="45.4" cy="45.4" r="12" class="icon OFF"/></svg></td><td><svg x="0" y="0" class="OFF button-12" viewBox="0 0 91 91"><circle cx="45.4" cy="45.4" r="12" class="icon OFF"/></svg></td><td><svg x="0" y="0" class="OFF button-13" viewBox="0 0 91 91"><circle cx="45.4" cy="45.4" r="12" class="icon OFF"/></svg></td><td><svg x="0" y="0" class="OFF button-14" viewBox="0 0 91 91"><circle cx="45.4" cy="45.4" r="12" class="icon OFF"/></svg></td></tr></table>
 <table class="harp harp-23">
-<tr><td><svg x="0" y="0" class="OFF button-0" viewBox="0 0 91 91"><circle cx="45.4" cy="45.4" r="12" class="icon OFF"/></svg></td><td><svg x="0" y="0" class="OFF button-1" viewBox="0 0 91 91"><circle cx="45.4" cy="45.4" r="12" class="icon OFF"/></svg></td><td><svg x="0" y="0" class="OFF button-2" viewBox="0 0 91 91"><circle cx="45.4" cy="45.4" r="12" class="icon OFF"/></svg></td><td><svg x="0" y="0" class="diamond button-3" viewBox="0 0 91 91"><path class="button ON-0" d="M90.7 76.5c0 7.8-6.3 14.2-14.2 14.2H14.2C6.3 90.7 0 84.4 0 76.5V14.2C0 6.3 6.3 0 14.2 0h62.3c7.8 0 14.2 6.3 14.2 14.2V76.5z"/><rect x="22.6" y="22.7" transform="matrix(-0.7071 -0.7071 0.7071 -0.7071 45.3002 109.5842)" width="45.4" height="45.4" class="icon ON-0"/> </svg></td><td><svg x="0" y="0" class="OFF button-4" viewBox="0 0 91 91"><circle cx="45.4" cy="45.4" r="12" class="icon OFF"/></svg></td></tr>
+<tr><td><svg x="0" y="0" class="OFF button-0" viewBox="0 0 91 91"><circle cx="45.4" cy="45.4" r="12" class="icon OFF"/></svg></td> <td><svg x="0" y="0" class="diamond button-3" viewBox="0 0 91 91"><path class="button ON-0" d="M90.7 76.5c0 7.8-6.3 14.2-14.2 14.2H14.2C6.3 90.7 0 84.4 0 76.5V14.2C0 6.3 6.3 0 14.2 0h62.3c7.8 0 14.2 6.3 14.2 14.2V76.5z"/><rect x="22.6" y="22.7" transform="matrix(-0.7071 -0.7071 0.7071 -0.7071 45.3002 109.5842)" width="45.4" height="45.4" class="icon ON-0"/> </svg></td><td><svg x="0" y="0" class="OFF button-2" viewBox="0 0 91 91"><circle cx="45.4" cy="45.4" r="12" class="icon OFF"/></svg></td><td><svg x="0" y="0" class="diamond button-3" viewBox="0 0 91 91"><path class="button ON-0" d="M90.7 76.5c0 7.8-6.3 14.2-14.2 14.2H14.2C6.3 90.7 0 84.4 0 76.5V14.2C0 6.3 6.3 0 14.2 0h62.3c7.8 0 14.2 6.3 14.2 14.2V76.5z"/><rect x="22.6" y="22.7" transform="matrix(-0.7071 -0.7071 0.7071 -0.7071 45.3002 109.5842)" width="45.4" height="45.4" class="icon ON-0"/> </svg></td><td><svg x="0" y="0" class="OFF button-4" viewBox="0 0 91 91"><circle cx="45.4" cy="45.4" r="12" class="icon OFF"/></svg></td></tr>
 <tr><td><svg x="0" y="0" class="circle button-5" viewBox="0 0 91 91"><path class="button ON-0" d="M90.7 76.5c0 7.8-6.3 14.2-14.2 14.2H14.2C6.3 90.7 0 84.4 0 76.5V14.2C0 6.3 6.3 0 14.2 0h62.3c7.8 0 14.2 6.3 14.2 14.2V76.5z"/><circle cx="45.4" cy="45.4" r="25.5" class="icon ON-0"/></svg></td><td><svg x="0" y="0" class="OFF button-6" viewBox="0 0 91 91"><circle cx="45.4" cy="45.4" r="12" class="icon OFF"/></svg></td><td><svg x="0" y="0" class="root button-7" viewBox="0 0 91 91"><path class="button ON-0" d="M90.7 76.5c0 7.8-6.3 14.2-14.2 14.2H14.2C6.3 90.7 0 84.4 0 76.5V14.2C0 6.3 6.3 0 14.2 0h62.3c7.8 0 14.2 6.3 14.2 14.2V76.5z"/><circle cx="45.5" cy="45.4" r="26" class="icon ON-0"/><rect x="19.5" y="19.3" transform="matrix(-0.7071 0.7071 -0.7071 -0.7071 109.7415 45.2438)" width="52" height="52" class="icon ON-0"/>
 </svg></td><td><svg x="0" y="0" class="OFF button-8" viewBox="0 0 91 91"><circle cx="45.4" cy="45.4" r="12" class="icon OFF"/></svg></td><td><svg x="0" y="0" class="OFF button-9" viewBox="0 0 91 91"><circle cx="45.4" cy="45.4" r="12" class="icon OFF"/></svg></td></tr>
 <tr><td><svg x="0" y="0" class="OFF button-10" viewBox="0 0 91 91"><circle cx="45.4" cy="45.4" r="12" class="icon OFF"/></svg></td><td><svg x="0" y="0" class="OFF button-11" viewBox="0 0 91 91"><circle cx="45.4" cy="45.4" r="12" class="icon OFF"/></svg></td><td><svg x="0" y="0" class="OFF button-12" viewBox="0 0 91 91"><circle cx="45.4" cy="45.4" r="12" class="icon OFF"/></svg></td><td><svg x="0" y="0" class="OFF button-13" viewBox="0 0 91 91"><circle cx="45.4" cy="45.4" r="12" class="icon OFF"/></svg></td><td><svg x="0" y="0" class="OFF button-14" viewBox="0 0 91 91"><circle cx="45.4" cy="45.4" r="12" class="icon OFF"/></svg></td></tr></table>
