--- a/songs/videogames/Sky_Children_of_the_Light_-_Waltzing_in_the_Rain.html
+++ b/songs/videogames/Sky_Children_of_the_Light_-_Waltzing_in_the_Rain.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0123)https://jmmelko.pythonanywhere.com/smedia/music_maker/songs/private/users/Nea/Vincent_Diamante__Waltzing_in_the_Rain_0.html -->
 <html xmlns:svg="http://www.w3.org/2000/svg" lang="en_US"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <meta name="date.created" content="2020-10-12 05:29:14.412600">
@@ -412,7 +411,7 @@ table.silent .ON-0.button {
 #$Title: Waltzing in the Rain
 #$Original artist(s): Vincent Diamante
 #$Arranger, Transcriber: Arranged by やまもとYamamoto, transcribed by Nea
-#$Musical key: C
+#$Musical key: Eb
 
 A4 B1 B4C3 . A5 B2 B4C3 . A2 B1 B4C3 
 A4 B1 B4C3 . A5 B2 B4C3 . A2 B1 B4C3 
