Converted old sheets

--- a/songs/anime/D._Gray-Man_-_The_Musician_(14th_song).html
+++ b/songs/anime/D._Gray-Man_-_The_Musician_(14th_song).html
@@ -406,7 +406,7 @@ table.silent .ON-0.button {
 <p><b>Musical key: </b>F</p>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/0nIu1F6BM2E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+<div id="ascii" style="display:none;" hidden>
 #$Title: The Musician (14th song)
 #$Original artist(s): D.Gray-man
 #$Arranger, Transcriber: Nea
